linuxmuster-webui7 (17.2.19.5) lmn72-testing; urgency=low

  * Added another fix for .installed flag in setup process

 -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 19:09:54 +0200

linuxmuster-webui7 (17.2.19.4) lmn72-testing; urgency=low

  * Remove adding .installed file on start

 -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 18:15:09 +0200

linuxmuster-webui7 (17.2.19.3) lmn72-testing; urgency=low

  * Fixed typo in auth module

 -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 18:01:18 +0200

linuxmuster-webui7 (17.2.19.2) lmn72-testing; urgency=low

  * Fixed to load kerberos environment and schoolmanager only if installed

 -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 17:47:12 +0200

linuxmuster-webui7 (17.2.19.1) lmn72-testing; urgency=low

  * Added Multischool bugfixes and updated system dependencies

 -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 16:48:28 +0200

linuxmuster-webui7 (17.2.19) lmn72-testing; urgency=low

  * Merged 7.2.15 upstream

 -- Andreas Till <andreas.till@netzint.de>  Thu, 20 Apr 2023 10:39:04 +0200

linuxmuster-webui7 (7.2.15) lmn72; urgency=medium

  * Upgrade some libraries for Python 3.10
  * A lot of pre-work on new session plugin, currently disabled
  * Add config entry for host in smbclient
  * Test script for smbclient will now test all common hosts
  * [smbclient] Load GPOS directly from samba
  * [smbclient] Use homepath in LDAP
  * [smbclient] Cut, copy, move, delete can now handle directories
  * [smbclient] Fix download with special chars
  * [users] Avoid conflict between extrastudent login and schoolclass
  * [users] Fix missing config for custom fields display
  * [groupmembership] Add schoolclass size
  * [groupmembership] Add option to kill an empty schoolclass
  * [vdi] Diverses fixs on run commands
  * [linbo4] Hide configs from other schools in multischool env
  * [webdav] Move directories
  * [webdav] Fix diverse encoding issues